# dronder-pzsp2

./: .gitignore  docker-compose.yaml
.github/workflows/: python-app.yml  typescript-app.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: app.py  auth.py  db.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css
frontend/app/login/: page.module.css  page.tsx
