[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "pydantic>=2.12.4",
]

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[dependency-groups]
dev = [
    "flask>=3.1.2",
    "pytest>=9.0.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
]
